--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -67,11 +67,17 @@ runs:
           
     # - - - (micromamba needs ca-certificates for ubuntu)
 
+    - name: (All) Patch environment.yml for Python
+      if: steps.cache-occt-restore.outputs.cache-hit != 'true'
+      shell: bash -l {0}
+      run: |
+        ${{ inputs.sed-i }} 's/python=3.13/python=${{ inputs.python-version }}/' environment.yml
+
     - name: Set up Python ${{ inputs.python-version }} via micromamba
       if: steps.cache-occt-restore.outputs.cache-hit != 'true'
       uses: mamba-org/setup-micromamba@v2
       with:
-        environment-file: environment-${{ inputs.python-version }}.yml
+        environment-file: environment.yml
         log-level: warning
         init-shell: ${{ inputs.shells }}
         cache-environment: true
