--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,13 @@ name: build-ocp
 channels:
   - conda-forge
 dependencies:
-  - python=3.10
+  - python=3.13
   - setuptools>=75
   - pybind11=2.13.*
   - cmake >3.24
   - ninja
-  - clang==20.1.8
-  - llvmdev==20.1.8
+  - cxx-compiler
   - tbb-devel
   - pybind11-stubgen
   - rapidjson
+  
